--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "mpdf/mpdf": "^8.0",
         "sebastian/diff": "1.4.3",
         "soapbox/laravel-formatter": "^3.0",
-        "yzalis/identicon": "^1.2"
+        "yzalis/identicon": "^1.2",
+        "zgldh/qiniu-laravel-storage": "^0.10.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
